修复打赏bug、UI、播放列表bug

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html id="boxHTML">
   <head>
     <meta charset="utf-8" />
-    <title>挖哇 - 独立文艺的音阅社区</title>
+    <title>挖哇音乐</title>
     <meta content="挖哇,余音,挖哇音乐,独立音乐,独立音乐人,原创音乐,小众音乐,音乐电台,歌单" name="keywords">
     <meta content="挖哇是一个收听和分享优质独立音乐的平台，我们推荐优秀的独立音乐作品与小众音乐人资讯，在欣赏音乐的同时，发现生活中的更多奇趣，结交更多同样热爱音乐的人。" name="description">    
     <!--[if lte IE 8]>
