--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </body>
   
 </html>
-
+  <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script>
   <script>
     var boxHTML=document.getElementById("boxHTML");
     var screenX = document.body.clientWidth / 16;  //20
@@ -60,5 +60,15 @@
     else{
         boxHTML.style.fontSize=20 + "px";   //ipad 电脑
     }
+    /*const body = document.getElementById("app");
+    body.addEventListener('click', function(){
+      wx.miniProgram.getEnv(function(res) {
+        console.log(res.miniprogram) // true
+      })
+      wx.miniProgram.postMessage({ data: 'foo' })
+      // wx.miniProgram.navigateTo({url: 'index'})
+      wx.miniProgram.postMessage({ data: {foo: 'bar'} })
+    })*/
+
 
   </script>
