--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     var boxHTML=document.getElementById("boxHTML");
     var screenX = document.body.clientWidth / 16;  //20
 
+    boxHTML.style.fontSize=screenX + "px";
     if (document.body.clientWidth<640){   //手机
         boxHTML.style.fontSize=screenX + "px";
     }
